290cm 페이지구성

--- a/vite/src/pages/product/product.html
+++ b/vite/src/pages/product/product.html
@@ -5,14 +5,16 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="/src/pages/product/product.css" />
     <script type="module" src="/src/pages/product/product.js"></script>
   </head>
   <body>
     <div data-path="/src/pages/layout/header.html"></div>
 
-    <div class="container">product</div>
+    <div class="container">
+      <ul></ul>
+    </div>
   </body>
 </html>
